@@ -142,5 +142,6 @@ Greg Hart             - PNG32 support patch
 Shigeyuki Hirai, Paul Janssens, wangsai, Gavan Fantom, Matthew Baker, Rob Ryan,
 Fred Steinhaeuser, Terry Burton, chisj, vlad417, Petr, Hassan Hajji,
 Emmanuel Blot, ßlúèÇhîp, Heiko Becker, Gavin Andresen, David Binderman,
-ralgozino, Sean McMurray, win32asm, Tobias Klauser, Antenore, Yoshimichi Inoue
+ralgozino, Sean McMurray, win32asm, Tobias Klauser, Antenore, Yoshimichi Inoue,
+Sunil Maganally
  - bug report / suggestion
